--- a/css/style.css
+++ b/css/style.css
@@ -4,4 +4,10 @@ hr.line{
 img{
   width: 670px;
   height: 670px;
+  al
+}
+h2{
+  font-family: 'Dancing Script', cursive;
+  text-align: center;
+  font-size: 60px;
 }
