--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body{
- background-image:url(img/roses.jpg);
+ background-image: url(https://www.larutadelsorigens.cat/filelook/full/67/673054/cute-glitter-wallpapers.jpg);
 }
 img.Lol{
 width:700px;
@@ -45,7 +45,7 @@ table{
   font-family: 'Sulphur Point', sans-serif;
   font-size: 30px;
   border: 6px dotted white;
-  background-color: pink;
+  background-color: white;
 }
 h1{
   text-align: center;
@@ -56,7 +56,7 @@ h1{
   overflow: hidden;
 }
 .topbar a:hover{
-  background-color: white;
+  background-color: purple;
 }
 .topbar a.active{
   color: black;
@@ -72,7 +72,7 @@ p{
     font-size: 30px;
 }
 .new1{
-  border-top: 20px solid pink;
+  border-top: 20px solid white;
 }
 .column {
   float: left;
